--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
+  "TokenKey": "8d72fed3-dec2-4db8-8ad1-f15baf3abe7e",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
